# Revision history for Task-BeLike-YANICK

version: 0.2.0
date:    Mon Sep 7 2009
changes:
- Added Development section
- Added Testing section
- Added WWW::Mechanize to Web Development section

version: 0.1.0
date:    Sat Aug 22 2009
changes:
- Initial release