@@ -1,7 +1,0 @@
-META.yml
-Makefile.PL
-Build
-_build
-*.tar.gz
-*.swp
-Task-BeLike-YANICK*
