@@ -1,9 +1,0 @@
-distrelease.yml
-\.git
-\.gitignore
-_build
-^Build$
-MANIFEST\.SKIP
-\.tar\.gz$
-\.swp$
-^Task-BeLike-YANICK
