@@ -1,0 +1,16 @@
+---
+abstract: 'like Yanick? Be like Yanick!'
+author:
+  - 'Yanick Champoux <yanick@cpan.org>'
+build_requires:
+  Module::Build: 0.3601
+configure_requires:
+  Module::Build: 0.3601
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.101620, CPAN::Meta::Converter version 2.101590'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Task-BeLike-YANICK
+version: 0.3.0
